added live links

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript Challenges</title>
 </head>
 <body>
-    <script src="./arrays with CRUD.js"></script>
+    <script src="./If-else challenge.js"></script>
 </body>
 </html>
