corrected folders and files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Javascript Challenges</title>
 </head>
 <body>
-    <script src="./If-else challenge.js"></script>
+    <script src="./javascript/function/function.js"></script>
 </body>
 </html>
