--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,6 @@
     <title>Javascript Challenges</title>
 </head>
 <body>
-    <script src="./javascript/function/function.js"></script>
+    <script src="./array with object with varoius loop/array with objects with varoius loop.js"></script>
 </body>
 </html>
